--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,10 @@ jobs:
         with:
           ruby-version: '3.1'
           bundler-cache: true
+      - name: Install dependencies
+        run: |
+          gem install bundler
+          bundle install
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
